<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikolaibozhilov.nsk_android_app.MainActivity"
    android:background="@drawable/loginscreenimage">


    <TextView
        android:text="@string/txtRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/txtLoginRegisterColor"
        android:id="@+id/txtRegistration"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/etUsernameHint"
        android:ems="10"
        android:paddingStart="15dp"
        android:background="@color/txtLoginRegisterColor"
        android:id="@+id/etUsername"
        android:layout_below="@+id/txtRegistration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:paddingLeft="15dp"
        android:hint="@string/etEmailHint"
        android:background="@color/txtLoginRegisterColor"
        android:id="@+id/etEmail"
        android:layout_below="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:paddingStart="15dp"
        android:hint="@string/etPasswordHint"
        android:background="@color/txtLoginRegisterColor"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etUsername"
        android:layout_alignStart="@+id/etUsername"
        android:layout_marginTop="15dp" />


    <TextView
        android:text="@string/txtLoginLink"
        android:textStyle="bold"
        android:textColor="@color/txtLoginRegisterColor"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLoginLink"
        android:layout_alignBaseline="@+id/btnRegister"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_alignStart="@+id/txtFavClass" />

    <Button
        android:text="@string/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtFavClass"
        android:layout_alignEnd="@+id/etEmail" />

    <TextView
        android:text="@string/txtFavClass"
        android:textColor="@color/txtLoginRegisterColor"
        android:textStyle="bold"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtFavClass"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp" />

    <Spinner
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:id="@+id/favClass"
        android:entries="@array/favClassArray"
        android:background="#99FFFFFF"
        android:paddingLeft="26dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignEnd="@+id/etEmail" />
</RelativeLayout>
