<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikolaibozhilov.nsk_android_app.MainActivity"
    android:background="@drawable/loginscreenimage"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/etUsernameHint"
        android:ems="10"
        android:paddingLeft="15dp"
        android:background="@color/txtLoginRegisterColor"
        android:id="@+id/etLoginUsername"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/etLoginPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:paddingLeft="15dp"
        android:hint="@string/etPasswordHint"
        android:background="@color/txtLoginRegisterColor"
        android:id="@+id/etLoginPassword"
        android:layout_above="@+id/btnLogin"
        android:layout_alignStart="@+id/etLoginUsername"
        android:layout_marginBottom="11dp" />

    <TextView
        android:text="@string/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:textStyle="bold"
        android:textColor="@color/txtLoginRegisterColor"
        android:id="@+id/textView"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/etLoginUsername"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_marginBottom="167dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/etLoginPassword" />

    <TextView
        android:text="@string/txtRegisterLink"
        android:layout_width="wrap_content"
        android:textColor="@color/txtLoginRegisterColor"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegisterLink"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_alignStart="@+id/etLoginPassword"
        android:layout_marginTop="9dp" />
</RelativeLayout>
