<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scroll_profile_background">

    <LinearLayout
        android:background="@drawable/profile_info_styles"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <TextView
            android:text="Welcome,
  Niki The Protector"
            android:textColor="@color/txtLoginRegisterColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtWelcome"
            android:textSize="22sp"
            android:textStyle="normal|bold|italic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:layout_weight="1" />

        <Button
            android:text="Logout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogout"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="300dp">


        <Button
            android:background="@drawable/category_buttons_styles"
            android:text="@string/btnClassesCategory"
            android:layout_width="300dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/txtLoginRegisterColor"
            android:textSize="32sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/btnClassesCategory" />

        <Button
            android:background="@drawable/category_buttons_styles"
            android:text="@string/btnDungeonsCatgeory"
            android:textColor="@color/txtLoginRegisterColor"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_marginStart="33dp"
            android:textSize="32sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/btnDungeonsCategory"
            />

        <Button
            android:background="@drawable/category_buttons_styles"
            android:text="@string/btnBossesCategory"
            android:textColor="@color/txtLoginRegisterColor"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_marginStart="33dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/btnBossesCategory" />

        <Button
            android:background="@drawable/category_buttons_styles"
            android:text="@string/btnAbout"
            android:textColor="@color/txtLoginRegisterColor"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_marginStart="105dp"
            android:layout_height="20dp"
            android:layout_weight="0.3"
            android:id="@+id/btnAbout" />
    </LinearLayout>


</LinearLayout>